[FEAT] API 완성